[PE] Fix performance issue in PaintController::FindOutOfOrderCachedItemForward()

I missed update of next_item_to_index_, causing cached items after
next_item_to_index_ to be added into index repeatedly for each new
valid item inserted.

(This is not a new regression but exposed by crrev.com/571251 in more
cases especially during upward composited scrolling when display items
newly appearing in the new interest rect are inserted in front of other
cached items. Before that CL the newly appearing display items were
treated as not cached because of their cache generation mismatching
the paint controller's. After that CL we call
FindOutOfOrderCachedItemForward().)

Bug: 873511
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I17bc3ee55ad678f968ac8d9904fbc6a9b087407f
Reviewed-on: https://chromium-review.googlesource.com/1173405
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582929}
Former-commit-id: 962c6b2894c7292ffa01263cf40346659abe1bcd